--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
