--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.5",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.6.0",
